// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginReadme Readme render default 1`] = `
<div
  class="Component-window-0-1-9 Component-windowBright-0-1-11 Component-windowAutoStretch-0-1-10"
  tabindex="1"
>
  <div
    class="ReadmeRaw-windowBody-0-1-1 Component-body-0-1-14"
  >
    <div
      class="ReadmeRaw-markdownWrapper-0-1-3 ReadmeRaw-markdownWrapper-0-1-8"
    >
      <div
        class="markdown-body"
      >
        <div>
          markdown
        </div>
      </div>
    </div>
    <div
      class="ReadmeRaw-buttonWrapper-0-1-5"
    >
      <button
        class="ReadmeRaw-showMoreButton-0-1-6 btn btn-outline-primary btn-sm"
        type="button"
      >
        show more
      </button>
    </div>
  </div>
</div>
`;

exports[`PluginReadme Readme render fullscreen 1`] = `
<div
  class="Component-window-0-1-9 Component-windowBright-0-1-11 Component-windowAutoStretch-0-1-10"
  tabindex="1"
>
  <div
    class="ReadmeRaw-windowBody-0-1-1 Component-body-0-1-14"
  >
    <div
      class="ReadmeRaw-markdownWrapper-0-1-3 ReadmeRaw-markdownWrapper-0-1-15"
    >
      <div
        class="markdown-body"
      >
        <div>
          markdown
        </div>
      </div>
    </div>
    <div
      class="ReadmeRaw-buttonWrapper-0-1-5"
    >
      <button
        class="ReadmeRaw-showMoreButton-0-1-6 btn btn-outline-primary btn-sm"
        type="button"
      >
        show more
      </button>
    </div>
  </div>
</div>
`;
